--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: dotnet package
+name: Dotnet build
 
 on: [push]
 
@@ -29,10 +29,3 @@ jobs:
           path: test-results-${{ matrix.dotnet-version }}
        # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
-      - name: Test report
-        uses: dorny/test-reporter@v1
-        with:
-          artifact: dotnet-results-${{ matrix.dotnet-version }}
-          name: dotnet-results-${{ matrix.dotnet-version }}
-          path: '*.trx'                     # Path to test results (inside artifact .zip)
-          reporter: dotnet-trx    
