--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,11 +21,11 @@ jobs:
       - name: Build
         run: dotnet build ./src/Debugging --configuration Release --no-restore
       - name: Test with dotnet
-        run: dotnet test ./src/Debugging --logger "trx;LogFileName=test-results.trx"
+        run: dotnet test ./src/Debugging --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
       - name: Upload dotnet test results
         uses: actions/upload-artifact@v3
         with:
           name: dotnet-results-${{ matrix.dotnet-version }}
-          path: test-results-${{ matrix.dotnet-version }}
+          path: TestResults-${{ matrix.dotnet-version }}
        # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
