--- a/src/FileSystemVisitor/FileSystemVisitor/FileSystemVisitor.Console/FileSystemVisitor.Console.csproj
+++ b/src/FileSystemVisitor/FileSystemVisitor/FileSystemVisitor.Console/FileSystemVisitor.Console.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileSystemVisitor.Lib\FileSystemVisitor.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
