--- a/src/FileSystemVisitor/FileSystemVisitor/FileSystemVisitor.Forms/FileSystemVisitor.Forms.csproj
+++ b/src/FileSystemVisitor/FileSystemVisitor/FileSystemVisitor.Forms/FileSystemVisitor.Forms.csproj
@@ -6,4 +6,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileSystemVisitor.Lib\FileSystemVisitor.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
