feat: implement task 1 and partially task 2
- add ConfigurationItemAttribute
- add ConfigurationComponentBase
- add ConfigurationManager and File Settings
- add ConfigurationManager and File provider
- add generic TryParse method

--- a/src/Reflection/Reflection.ConsoleApp/Reflection.ConsoleApp.csproj
+++ b/src/Reflection/Reflection.ConsoleApp/Reflection.ConsoleApp.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Reflection.Attribute\Reflection.Attributes.csproj" />
+    <ProjectReference Include="..\Reflection.Providers\Reflection.Providers.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
