feat: implement task2
- load providers from .dll via reflection
- minor structure refactoring

--- a/src/Reflection/Reflection.Attribute/Reflection.Attributes.csproj
+++ b/src/Reflection/Reflection.Attribute/Reflection.Attributes.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Reflection.Plugin\Reflection.Plugin.csproj" />
-    <ProjectReference Include="..\Reflection.Providers\Reflection.Providers.csproj" />
+    <ProjectReference Include="..\Reflection.Plugin\Reflection.ProviderInterface.csproj" />
   </ItemGroup>
 
 </Project>
