--- a/src/Reflection/Reflection.ConsoleApp/Reflection.ConsoleApp.csproj
+++ b/src/Reflection/Reflection.ConsoleApp/Reflection.ConsoleApp.csproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Reflection.Attribute\Reflection.Attributes.csproj" />
-    <ProjectReference Include="..\Reflection.Providers\Reflection.Providers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +18,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Providers\Reflection.Providers.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
