--- a/src/Reflection/Reflection.Providers/Reflection.Providers.csproj
+++ b/src/Reflection/Reflection.Providers/Reflection.Providers.csproj
@@ -1,17 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.23" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.23" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Reflection.Plugin\Reflection.Plugin.csproj" />
+    <ProjectReference Include="..\Reflection.Plugin\Reflection.ProviderInterface.csproj" />
   </ItemGroup>
 
 </Project>
