--- a/src/FileCabinet/FileCabinet.Services/FileCabinet.Service.csproj
+++ b/src/FileCabinet/FileCabinet.Services/FileCabinet.Service.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.25" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.25" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FileCabinet.Models\FileCabinet.Models.csproj" />
   </ItemGroup>
 
